// Vitest Snapshot v1

exports[`WordHeatMap > word color is blue 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3"
    data-testid="heat-map-word"
    style="background-color: rgb(0, 127.5, 255);"
  >
    <span
      class="font-bold text-white"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white"
      style="background-color: rgb(0, 0, 0);"
    >
      5
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word color is green 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3"
    data-testid="heat-map-word"
    style="background-color: rgb(0, 170, 0);"
  >
    <span
      class="font-bold text-white"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white"
      style="background-color: rgb(0, 0, 0);"
    >
      5
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word color is none 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3"
    data-testid="heat-map-word"
    style="background-color: rgb(230, 230, 230);"
  >
    <span
      class="font-bold text-gray-900"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white"
      style="background-color: rgb(0, 0, 0);"
    >
      5
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word color is red 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3"
    data-testid="heat-map-word"
    style="background-color: rgb(255, 0, 0);"
  >
    <span
      class="font-bold text-white"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white"
      style="background-color: rgb(0, 0, 0);"
    >
      5
    </span>
  </span>
</DocumentFragment>
`;
